--- a/html/introduction.html
+++ b/html/introduction.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 
-<title>Game Programming Patterns / Introduction</title>
+<title>Introduction &middot; Game Programming Patterns</title>
 
 <!-- Tell mobile browsers we're optimized for them and they don't need to crop
      the viewport. -->
@@ -340,7 +340,7 @@ Patterns</em>. This will give you a clearer picture of how a pattern lives
 in the larger pattern ecosystem.</p>
 <h2><a href="#how-the-book-is-formatted" name="how-the-book-is-formatted">How the Book is Formatted</a></h2>
 <p>Each <span name="aside">pattern</span> has a set of parts&thinsp;&mdash;&thinsp;the ingredients in its recipe.
-Every implementation will include these parts, so its important to
+Every implementation will include these parts, so it&#x2019;s important to
 note them all. The first time one is mentioned, it will be in <strong>bold
 face</strong>.</p>
 <aside name="aside">
