--- a/html/subclass-sandbox.html
+++ b/html/subclass-sandbox.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 
-<title>Game Programming Patterns / Behavioral Patterns / Subclass Sandbox</title>
+<title>Subclass Sandbox &middot; Behavioral Patterns &middot; Game Programming Patterns</title>
 
 <!-- Tell mobile browsers we're optimized for them and they don't need to crop
      the viewport. -->
