--- a/html/double-buffer.html
+++ b/html/double-buffer.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 
-<title>Game Programming Patterns / Sequencing Patterns / Double Buffer</title>
+<title>Double Buffer &middot; Sequencing Patterns &middot; Game Programming Patterns</title>
 
 <!-- Tell mobile browsers we're optimized for them and they don't need to crop
      the viewport. -->
