--- a/html/prototype.html
+++ b/html/prototype.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 
-<title>Game Programming Patterns / Design Patterns Revisited / Prototype</title>
+<title>Prototype &middot; Design Patterns Revisited &middot; Game Programming Patterns</title>
 
 <!-- Tell mobile browsers we're optimized for them and they don't need to crop
      the viewport. -->
