--- a/html/service-locator.html
+++ b/html/service-locator.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 
-<title>Game Programming Patterns / Decoupling Patterns / Service Locator</title>
+<title>Service Locator &middot; Decoupling Patterns &middot; Game Programming Patterns</title>
 
 <!-- Tell mobile browsers we're optimized for them and they don't need to crop
      the viewport. -->
