--- a/html/spatial-partition.html
+++ b/html/spatial-partition.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 
-<title>Game Programming Patterns / Optimization Patterns / Spatial Partition</title>
+<title>Spatial Partition &middot; Optimization Patterns &middot; Game Programming Patterns</title>
 
 <!-- Tell mobile browsers we're optimized for them and they don't need to crop
      the viewport. -->
