--- a/html/bytecode.html
+++ b/html/bytecode.html
@@ -249,11 +249,15 @@
 <p>What if instead of loading actual machine code and executing it directly, we defined our own <em>virtual</em> machine code? We&#x2019;d then write a little emulator for it in our game. It would be similar to machine code&thinsp;&mdash;&thinsp;dense, linear, relatively low-level&thinsp;&mdash;&thinsp;but would also be handled entirely by our game so we could safely sandbox it.</p>
 <aside name="jit">
 
-<p>This is why many game consoles and iOS don&#x2019;t allow programs to execute machine code loaded or generated at runtime.</p>
-<p>That&#x2019;s a drag because the fastest programming language interpreters do exactly that. They contain a "just-in-time" compiler, or <em>JIT</em>, that translates the language to highly optimized machine code on the fly.</p>
+<p>This is why many game consoles and iOS don&#x2019;t allow programs to execute machine code loaded or generated at runtime. That&#x2019;s a drag because the fastest programming language implementations do exactly that. They contain a "just-in-time" compiler, or <em>JIT</em>, that translates the language to optimized machine code on the fly.</p>
 </aside>
 
-<p>We&#x2019;d call our little emulator a <em>virtual machine</em>, and the synthetic binary machine code it runs <em>bytecode</em>. It&#x2019;s got the flexibility and ease of use of defining things in data, but better performance than higher-level representations like the Interpreter pattern.</p>
+<p>We&#x2019;d call our little emulator a <span name="virtual"><em>virtual machine</em></span>, and the synthetic binary machine code it runs <em>bytecode</em>. It&#x2019;s got the flexibility and ease of use of defining things in data, but better performance than higher-level representations like the Interpreter pattern.</p>
+<aside name="virtual">
+
+<p>In programming language circles, "virtual machine" and "interpreter" are synonymous, and I use them interchangeably here. When I refer to the Gang of Four&#x2019;s Interpreter pattern, I&#x2019;ll use "pattern" to make it clear.</p>
+</aside>
+
 <p>This sounds daunting, though. My goal for the rest of this chapter is to show you that if you keep your feature list pared down, it&#x2019;s actually pretty approachable. Even if you end up not using this pattern yourself, you&#x2019;ll at least have a better understanding of Lua and many other languages which are implemented using it.</p>
 <h2><a href="#the-pattern" name="the-pattern">The Pattern</a></h2>
 <p>An <strong>instruction set</strong> defines the low-level operations that can be performed. These are encoded as a <strong>sequence of bytes</strong>. A <strong>virtual machine</strong> executes these instructions one at a time, using a <strong>stack for intermediate values</strong>. By combining instructions, complex high-level behavior can be defined.</p>
@@ -393,7 +397,8 @@
 <p>Type that in and you&#x2019;ll have written your first virtual machine. Unfortunately, it&#x2019;s not very flexible. We can&#x2019;t define a spell that touches your opponent, or lowers a stat. We can only play one sound!</p>
 <p>To get something that starts to have the expressive feel of an actual language, we need to get parameters in here.</p>
 <h3><a href="#a-stack-machine" name="a-stack-machine">A stack machine</a></h3>
-<p>The Interpreter pattern handles parameters and subexpressions by explicitly wiring them together as a tree of nested objects, but we want the speed of a flat list of instructions. To do that, we need to make the data flow that brings parameters to the callsite that needs them implicit in the structure of the code. We&#x2019;ll do it the same way your CPU does: <span name="stack-machine">with a stack</span>.</p>
+<p>To execute a complex nested expression, you start with the innermost subexpressions. You calculate those and the results flow outward as arguments to the expressions that contain them until eventually the whole expression has been evaluated.</p>
+<p>The Interpreter pattern models this explicitly as a tree of nested objects, but we want the speed of a flat list of instructions. We still need to ensure results from subexpressions flow to the right surrounding expressions. But, since our data is flattened, we&#x2019;ll have to use the <em>order</em> of the instructions to control that. We&#x2019;ll do it the same way your CPU does: <span name="stack-machine">with a stack</span>.</p>
 <aside name="stack-machine">
 
 <p>This architecture is unimaginatively called a <a href="http://en.wikipedia.org/wiki/Stack_machine"><em>stack machine</em></a>. Programming languages like <a href="http://en.wikipedia.org/wiki/Forth_(programming_language)">Forth</a>, <a href="http://en.wikipedia.org/wiki/PostScript">PostScript</a> and <a href="http://en.wikipedia.org/wiki/Factor_(programming_language)">Factor</a> expose this model directly to the user.</p>
@@ -607,7 +612,7 @@
 </aside>
 
 <p>This spares you from designing a grammar and writing a parser for a little language. But, I know, some of you find UI programming equally unpleasant. Well, in that case, I don&#x2019;t have any good news for you.</p>
-<p>Ultimately, this pattern is about expressing behavior in a user-friendly, high-level format. You have to design the user experience for that format, and to execute it efficiently, you need to translate it into a lower-level form. It is real work, but if you&#x2019;re up to the challenge, it can pay off in spades.</p>
+<p>Ultimately, this pattern is about expressing behavior in a user-friendly, high-level way. You have to craft the user experience. To execute the behavior efficiently, you then need to translate that into a lower-level form. It is real work, but if you&#x2019;re up to the challenge, it can pay off.</p>
 <h2><a href="#design-decisions" name="design-decisions">Design Decisions</a></h2>
 <p>I <span name="failed">tried</span> to keep this chapter as simple as I could, but what we&#x2019;re really doing is creating a language. That&#x2019;s a pretty open-ended design space. Exploring it can be tons of fun, so make sure you don&#x2019;t forget to finish your game.</p>
 <aside name="failed">
@@ -664,7 +669,7 @@
 </li>
 <li>
 <p><strong>Abstraction.</strong> If your users start defining a <em>lot</em> of stuff in data, eventually they&#x2019;ll want to start reusing bits of bytecode instead of having to copy and paste it. You may want something like callable procedures.</p>
-<p>In its simplest form these aren&#x2019;t much more complex than a jump. The only difference is that the VM maintains a second <em>return</em> stack. When you do a "call" instruction, you push the current instruction index onto that stack before jumping to the bytecode being called. When you hit a "return", you pop that index and jump back to it.</p>
+<p>In its simplest form these aren&#x2019;t much more complex than a jump. The only difference is that the VM maintains a second <em>return</em> stack. When it executes a "call" instruction, it pushes the current instruction index onto the return stack then jumps to the called bytecode. When it hits a "return", the VM pops the index from the return stack and jumps back to it.</p>
 </li>
 </ul>
 <h3><a href="#how-are-values-represented" name="how-are-values-represented">How are values represented?</a></h3>
@@ -814,7 +819,7 @@ Those languages leave it to the <em>user</em> to make sure they don&#x2019;t wri
 <p><em>You have to handle syntax errors.</em> This is one of the most important and most difficult parts of the process. When users make syntax and semantic errors&thinsp;&mdash;&thinsp;which they will, constantly&thinsp;&mdash;&thinsp;it&#x2019;s your job to guide them back onto the right path. Giving helpful feedback isn&#x2019;t easy when all you know is that your parser is sitting on some unexpected punctuation.</p>
 </li>
 <li>
-<p><em>It will likely turn off non-technical users.</em> We programmers like text files. Combined with powerful command-line tools, we think of them as the LEGO blocks of computing: simple but easily composible in a million ways.</p>
+<p><em>It will likely turn off non-technical users.</em> We programmers like text files. Combined with powerful command-line tools, we think of them as the LEGO blocks of computing: simple but easily composable in a million ways.</p>
 <p>Most non-programmers don&#x2019;t think of text like that. To them, it feels like filling in tax forms for a robotic auditor that yells at them if they forget a single semicolon.</p>
 </li>
 </ul>
@@ -856,7 +861,7 @@ Those languages leave it to the <em>user</em> to make sure they don&#x2019;t wri
 <p><a href="http://en.wikipedia.org/wiki/UnrealEd#Kismet">Kismet</a> is a graphical scripting tool built into UnrealEd, the editor for the Unreal engine.</p>
 </li>
 <li>
-<p>My own little scripting language <a href="https://github.com/munificent/wren">Wren</a> is a simple stack-based bytecode interpreter.</p>
+<p>My own little scripting language, <a href="https://github.com/munificent/wren">Wren</a>, is a simple stack-based bytecode interpreter.</p>
 </li>
 </ul>
 <p class="footer">&copy; 2009-2014 Robert Nystrom</p>
