Capitalize SmallTalk correctly.

--- a/html/service-locator.html
+++ b/html/service-locator.html
@@ -578,7 +578,7 @@ implementation requested.</p>
 interact with the type system at runtime. For example, we could find
 a class with a given name, find its constructor, and then invoke it to
 create an instance.</p>
-<p>Dynamically-typed languages like Lisp, SmallTalk, and Python get this
+<p>Dynamically-typed languages like Lisp, Smalltalk, and Python get this
 by their very nature, but newer static languages like C# and Java also
 support it.</p>
 </aside>
